--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -45,6 +45,24 @@
         android:layout_height="wrap_content"
         android:text="@string/textView4"/>
 
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/textView5"
+        android:layout_centerVertical="true"
+        android:layout_alignRight="@+id/textView3"
+        android:layout_alignEnd="@+id/textView3" />
+
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_below="@id/textView5"
+        android:layout_alignStart="@id/textView1"
+        android:layout_alignLeft="@id/textView5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/textView6"/>
+
     <EditText android:id="@+id/edit_message"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -71,6 +89,16 @@
         android:layout_alignLeft="@id/textView1"
         android:layout_below="@id/button_one"
         android:text="@string/button_two"
+        android:onClick="showMessage" />
+
+    <Button
+        android:id="@+id/button_three"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignStart="@id/textView1"
+        android:layout_alignLeft="@id/textView1"
+        android:layout_below="@id/textView6"
+        android:text="@string/button_three"
         android:onClick="showMessage" />
 
 </RelativeLayout>
